<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/txtPaint"
        android:layout_width="148dp"
        android:layout_height="73dp"
        android:layout_marginBottom="320dp"
        android:layout_marginEnd="147dp"
        android:layout_marginLeft="116dp"
        android:layout_marginRight="147dp"
        android:layout_marginStart="116dp"
        android:entries="@array/txtPaint"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputHeight"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/txtHeight"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputDiatance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtDistance"
            android:textColorHint="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="121dp"
        android:layout_marginLeft="94dp"
        android:layout_marginRight="121dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="188dp"
        android:text="@string/btnCost"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPaint" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="247dp"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="93dp"
        android:layout_marginLeft="71dp"
        android:layout_marginRight="93dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/btnCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPaint"
        app:srcCompat="@drawable/p" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="160dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="157dp"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="157dp"
        android:layout_marginStart="136dp"
        android:contentDescription="@string/txtEquipment"
        android:text="@string/txtHint"
        app:layout_constraintBottom_toTopOf="@+id/txtPaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</android.support.constraint.ConstraintLayout>